--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,20 @@
-# Set Gradle settings which apply to all modules here.
+VERSION_NAME=1.4.0
+GROUP=com.webberrobots
+
+SAMPLE_VERSION_NAME=1.0
+SAMPLE_VERSION_CODE=1
+
+POM_DESCRIPTION=Webber Robots customized android-switch-backport
+POM_URL=https://github.com/wynalazca/android-switch-backport
+POM_SCM_URL=https://github.com/wynalazca/android-switch-backport
+POM_SCM_CONNECTION=scm:git@github.com:wynalazca/android-switch-backport.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:wynalazca/android-switch-backport.git
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=webberrobots
+POM_DEVELOPER_NAME=Andrew Webber
+
+ANDROID_BUILD_TARGET_SDK_VERSION=21
+ANDROID_BUILD_TOOLS_VERSION=21.0.2
+ANDROID_BUILD_SDK_VERSION=21
